<resources>
    <string name="app_name">Pizza</string>
    <string name="food">Меню</string>
    <string name="profile">Профиль</string>
    <string name="contacts">Контакты</string>
    <string name="basket">Корзина</string>
    <string name="pizza_on_map">  Pizza на карте  </string>
    <string name="pizza">Pizza</string>
    <string name="drink">пить</string>
    <string name="a1">Маргарита</string>
    <string name="_7_90">от 7,90 руб.</string>
    <string name="o">тесто, соус, сыр моцарелла, орегано</string>
    <string name="name">name</string>
    <string name="button_little">Маленькая</string>
    <string name="button_medium">Средняя</string>
    <string name="button_big">Большая</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="choose">Выберете объём</string>
    <string name="_1">1 л</string>
    <string name="_0_5">0.5 л</string>
    <string name="_1_5">1.5 л</string>
    <string name="_2">2 л</string>
    <string name="name_pr">Имя</string>
    <string name="profile_pr">Телефон</string>
    <string name="mail_pr">E-mail</string>
    <string name="birth_pr">Дата рождения</string>
    <string name="address_pr">Адрес доставки</string>
    <string name="save">Сохранить</string>
    <string name="_7325">7325</string>
    <string name="to_order">Закажите пиццу по телефону</string>
    <string name="vk">vk.com/pizza_italiana_pinsk</string>
    <string name="feedback">Вопросы, отзывы и предложения по улучшению сервиса</string>
    <string name="change">Редактировать</string>
    <string name="message_profile">Поля не заполнены, пожалуйста, добавьте информацию</string>
    <string name="buyer">Клиент</string>
    <string name="seller">Владелец</string>
    <string name="cancel">Отмена</string>
    <string name="submit">Выбрать</string>
    <string name="choose_cat">Выберите категорию</string>
    <string name="personal_dt">Персональные данные</string>
    <string name="another_profile">Другой профиль</string>
    <string name="price_list">  от %1$s  </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="piz">Пицца</string>
    <string name="dessert">Дессерт</string>
    <string name="dr">Напиток</string>
    <string name="input_inf">Введите информацию</string>
    <string name="add_name">Название</string>
    <string name="prices">Цены</string>
    <string name="weight">Вес</string>
    <string name="ingredients">Ингредиенты</string>
    <string name="image">Изображение</string>
    <string name="add_to_menu">Добавить в меню</string>
    <string name="volumes">Объём</string>
    <string name="count">Количество</string>
    <string name="title_activity_maps">Map</string>
    <string name="show_grafic">Показать график</string>
    <string name="delete">Очистить базу заказов</string>
</resources>
