<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="360dp"
    android:layout_height="300dp">

    <Button
        android:id="@+id/cancel_btn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="28dp"
        android:layout_toStartOf="@+id/submit_btn"
        android:background="@drawable/second_button"
        android:text="@string/cancel"
        android:textColor="@color/colorPrimaryLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="48dp"
        android:layout_marginBottom="28dp"
        android:background="@drawable/button_frame"
        android:text="@string/submit"
        android:textColor="@color/colorPrimaryLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cancel_btn" />

    <RadioGroup
        android:id="@+id/set_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/cancel_btn"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="48dp"
        android:layout_marginEnd="144dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/cancel_btn"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:layout_width="168dp"
            android:layout_height="42dp"
            android:text="@string/buyer"
            android:textSize="18sp"
            android:textStyle="italic" />

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="42dp"
            android:text="@string/seller"
            android:textSize="18sp"
            android:textStyle="italic" />

    </RadioGroup>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/set_radio_group"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="32dp"
        android:text="@string/choose_cat"
        android:textColor="@color/colorDarkText"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/set_radio_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</RelativeLayout>