<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".seller.AddPositionActivity">

    <FrameLayout
        android:id="@+id/add_fragment_holder"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="150dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

    </FrameLayout>

    <Button
        android:id="@+id/add_pizza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/button_frame"
        android:text="@string/piz"
        android:textColor="@color/colorPrimaryLight"
        app:layout_constraintBottom_toTopOf="@+id/add_fragment_holder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add_dessert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/button_frame"
        android:text="@string/dessert"
        android:textColor="@color/colorPrimaryLight"
        app:layout_constraintBottom_toTopOf="@+id/add_fragment_holder"
        app:layout_constraintStart_toEndOf="@+id/add_pizza"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/add_drink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/button_frame"
        android:text="@string/dr"
        android:textColor="@color/colorPrimaryLight"
        app:layout_constraintBottom_toTopOf="@+id/add_fragment_holder"
        app:layout_constraintStart_toEndOf="@+id/add_dessert"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:text="@string/input_inf"
        android:textColor="@color/colorDarkText"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/add_fragment_holder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_pizza"
        app:layout_constraintVertical_bias="0.131" />

</androidx.constraintlayout.widget.ConstraintLayout>